Revision history for Array::Sorted::Util

{{$NEXT}}

0.0.10  2024-06-24T20:04:09+02:00
    - Add sponsor link and button
    - Update copyright year

0.0.9  2021-12-03T19:42:05+01:00
    - Some pod tweaks and fixes

0.0.8  2021-11-07T11:50:52+01:00
    - Transparently allow IterationBuffers to be used as haystacks
      as well.

0.0.7  2021-09-08T00:47:25+02:00
    - Move to the zef ecosystem
    - Update email address

0.0.6  2021-05-06T12:28:37+02:00
    - Fix race condition on inserts on native arrays

0.0.5  2021-04-30T22:12:59+02:00
    - Add support for "nexts" and "prevs" for convenience

0.0.4  2021-04-27T13:53:13+02:00
    - Fix improper rendering of some native comparisons
    - Some pod rendering fixes, raydiak++

0.0.3  2021-04-18T18:50:43+02:00
    - Use "array[str] \a" instead of "str @a" in signatures to
      get around slowdown of https://github.com/rakudo/rakudo/issues/4097

0.0.2  2021-04-17T19:23:36+02:00
    - Fix signature on one of the native deletes candidates
    - Add support for :pos to inserts, to prevent re-searching

0.0.1  2021-04-16T14:56:35+02:00
    - Initial version