@@ -2,3 +2,4 @@
 /Array-Sorted-Util-*
 /releases/
 /foo
+*.rakucov
