@@ -18,6 +18,9 @@
   ],
   "source-url": "https://github.com/lizmat/Array-Sorted-Util.git",
   "tags": [
+    "SORTING",
+    "SEARCH",
+    "ARRAY"
   ],
   "test-depends": [
   ],
