@@ -2,12 +2,14 @@ name = Array::Sorted::Util
 
 [ReadmeFromPod]
 ; enable = false
-filename = lib/Array/Sorted/Util.rakumod
+filename = doc/Array-Sorted-Util.rakudoc
 
 [PruneFiles]
 ; match = ^ 'xt/'
 
 [Badges]
-provider = github-actions/test
+provider = github-actions/linux.yml
+provider = github-actions/macos.yml
+provider = github-actions/windows.yml
 
 [UploadToZef]
